✨ Add CORS support and enhance hue wrap-around handling
- Implement CORS headers across all web server endpoints for better cross-origin compatibility
- Update hue gradient rendering in UI to properly handle wrap-around ranges (e.g., 250-10)
- Switch config endpoint to JSON format for easier client-side parsing
- Fix random hue selection in effects to support wrap-around ranges
- Add onmouseup events to sliders for immediate config updates on release

--- a/Outtatimers Portal/data/index.html
+++ b/Outtatimers Portal/data/index.html
@@ -175,14 +175,14 @@
 
                 <div class="form-group">
                     <label for="speed">Rotation Speed (1-10):</label>
-                    <input type="range" id="speed" min="1" max="10" value="2" class="range-slider" oninput="updateValue('speed', this.value)">
+                    <input type="range" id="speed" min="1" max="10" value="2" class="range-slider" oninput="updateValue('speed', this.value)" onmouseup="setConfig('speed', this.value)">
                     <span id="speed-value" class="range-value">2</span>
                     <button class="button" onclick="setConfig('speed', document.getElementById('speed').value)">Set Speed</button>
                 </div>
 
                 <div class="form-group">
                     <label for="brightness">Max Brightness (0-255):</label>
-                    <input type="range" id="brightness" min="0" max="255" value="255" class="range-slider" oninput="updateValue('brightness', this.value)">
+                    <input type="range" id="brightness" min="0" max="255" value="255" class="range-slider" oninput="updateValue('brightness', this.value)" onmouseup="setConfig('brightness', this.value)">
                     <span id="brightness-value" class="range-value">255</span>
                     <button class="button" onclick="setConfig('brightness', document.getElementById('brightness').value)">Set Brightness</button>
                 </div>
@@ -284,20 +284,83 @@
             document.getElementById(id + '-value').textContent = value;
         }
 
+        function hsvToRgb(h, s, v) {
+            h = (h / 255) * 360; // Convert to degrees for standard HSV
+            s /= 100;
+            v /= 100;
+
+            const C = v * s;
+            const X = C * (1 - Math.abs(((h / 60) % 2) - 1));
+            const m = v - C;
+
+            let r = 0, g = 0, b = 0;
+            if (h >= 0 && h < 60) { r = C; g = X; b = 0; }
+            else if (h >= 60 && h < 120) { r = X; g = C; b = 0; }
+            else if (h >= 120 && h < 180) { r = 0; g = C; b = X; }
+            else if (h >= 180 && h < 240) { r = 0; g = X; b = C; }
+            else if (h >= 240 && h < 300) { r = X; g = 0; b = C; }
+            else if (h >= 300 && h < 360) { r = C; g = 0; b = X; }
+
+            r = Math.round((r + m) * 255);
+            g = Math.round((g + m) * 255);
+            b = Math.round((b + m) * 255);
+
+            return { r, g, b };
+        }
+
+        function rgbToHex(r, g, b) {
+            return '#' + ((1 << 24) + (r << 16) + (g << 8) + b).toString(16).slice(1).toUpperCase();
+        }
+
         function updateHueGradient() {
             const minHue = parseInt(document.getElementById('hue-min').value);
             const maxHue = parseInt(document.getElementById('hue-max').value);
             hueCanvas.width = hueCanvas.offsetWidth;
+            const width = hueCanvas.width;
+            const height = hueCanvas.height;
+            hueCtx.clearRect(0, 0, width, height);
 
-            const gradient = hueCtx.createLinearGradient(0, 0, hueCanvas.width, 0);
-            const steps = 100;
-            for (let i = 0; i <= steps; i++) {
-                const hue = minHue + (maxHue - minHue) * (i / steps);
-                const ratio = i / steps;
-                gradient.addColorStop(ratio, `hsl(${hue}, 100%, 50%)`);
+            const numSteps = width;
+            const stepSize = 1 / numSteps;
+
+            if (minHue <= maxHue) {
+                // Non-wrapping: direct linear interpolation
+                for (let x = 0; x < width; x++) {
+                    const ratio = x / (width - 1);
+                    const hue = minHue + (maxHue - minHue) * ratio;
+                    const { r, g, b } = hsvToRgb(hue, 100, 100);
+                    hueCtx.fillStyle = rgbToHex(r, g, b);
+                    hueCtx.fillRect(x, 0, 1, height);
+                }
+            } else {
+                // Wrapping: split into two segments (min to 255, then 0 to max)
+                const totalLength = (255 - minHue) + (maxHue + 1); // Hue range length
+                let x = 0;
+
+                // First segment: minHue to 255
+                const firstLen = 255 - minHue;
+                const firstSteps = Math.floor((width * firstLen) / totalLength);
+                for (let i = 0; i < firstSteps; i++) {
+                    const ratio = i / (firstSteps - 1);
+                    const hue = minHue + (firstLen * ratio);
+                    const { r, g, b } = hsvToRgb(hue, 100, 100);
+                    hueCtx.fillStyle = rgbToHex(r, g, b);
+                    hueCtx.fillRect(x, 0, 1, height);
+                    x++;
+                }
+
+                // Second segment: 0 to maxHue
+                const secondLen = maxHue + 1;
+                const secondSteps = width - firstSteps;
+                for (let i = 0; i < secondSteps; i++) {
+                    const ratio = i / (secondSteps - 1);
+                    const hue = 0 + (secondLen * ratio);
+                    const { r, g, b } = hsvToRgb(hue, 100, 100);
+                    hueCtx.fillStyle = rgbToHex(r, g, b);
+                    hueCtx.fillRect(x, 0, 1, height);
+                    x++;
+                }
             }
-            hueCtx.fillStyle = gradient;
-            hueCtx.fillRect(0, 0, hueCanvas.width, hueCanvas.height);
         }
 
         function setHueRangeOnChange() {
@@ -373,28 +436,17 @@
 
         function fetchConfig() {
             fetch(baseURL + '/config')
-                .then(response => response.text())
+                .then(response => response.json())
                 .then(data => {
-                    const lines = data.split('\n');
-                    lines.forEach(line => {
-                        if (line.includes('Rotation Speed:')) {
-                            const value = line.split(': ')[1];
-                            document.getElementById('speed').value = value;
-                            document.getElementById('speed-value').textContent = value;
-                        } else if (line.includes('Max Brightness:')) {
-                            const value = line.split(': ')[1];
-                            document.getElementById('brightness').value = value;
-                            document.getElementById('brightness-value').textContent = value;
-                        } else if (line.includes('Color Hue Range:')) {
-                            const range = line.split(': ')[1];
-                            const [min, max] = range.split(' - ');
-                            document.getElementById('hue-min').value = min;
-                            document.getElementById('hue-min-value').textContent = min;
-                            document.getElementById('hue-max').value = max;
-                            document.getElementById('hue-max-value').textContent = max;
-                            updateHueGradient();
-                        }
-                    });
+                    document.getElementById('speed').value = data.speed;
+                    document.getElementById('speed-value').textContent = data.speed;
+                    document.getElementById('brightness').value = data.brightness;
+                    document.getElementById('brightness-value').textContent = data.brightness;
+                    document.getElementById('hue-min').value = data.hueMin;
+                    document.getElementById('hue-min-value').textContent = data.hueMin;
+                    document.getElementById('hue-max').value = data.hueMax;
+                    document.getElementById('hue-max-value').textContent = data.hueMax;
+                    updateHueGradient();
                 })
                 .catch(error => {
                     console.error('Error loading config:', error);
