--- a/Outtatimers Portal/data/index.html
+++ b/Outtatimers Portal/data/index.html
@@ -174,8 +174,8 @@
                 <p>Adjust these settings to customize your portal effect:</p>
 
                 <div class="form-group">
-                    <label for="speed">Rotation Speed (1-10):</label>
-                    <input type="range" id="speed" min="1" max="10" value="2" class="range-slider" oninput="updateValue('speed', this.value)" onmouseup="setConfig('speed', this.value)">
+                    <label for="speed">Rotation Speed (0-10, 0=stop):</label>
+                    <input type="range" id="speed" min="0" max="10" value="2" class="range-slider" oninput="updateValue('speed', this.value)" onmouseup="setConfig('speed', this.value)">
                     <span id="speed-value" class="range-value">2</span>
                     <button class="button" onclick="setConfig('speed', document.getElementById('speed').value)">Set Speed</button>
                 </div>
